<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".HomepageActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-46dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="661dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/home_page"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/YouAreSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/you_are"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tvStatues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toEndOf="@+id/YouAreSentence"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnStartwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/buttons"
            android:fontFamily="casual"
            android:text="@string/start_work"
            android:textColor="#FFF9C4"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="331dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnProfile"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttons"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnHome"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnReminder"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:background="@drawable/buttons"
            android:text="@string/reminder"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>