<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".myprofile">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="411dp"
        android:layout_height="94dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textAllCaps="true"
        android:textColor="@color/offwhite_project"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPostion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tvID" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tvID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/position"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/phone_number"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/salary"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/id"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/TvPhone" />

    <TextView
        android:id="@+id/TvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tvPostion" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="149dp"
        android:layout_height="101dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_profile"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buSalaryReport"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/buttons"
            android:text="@string/salary_report"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buAttendenceReport"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/buttons"
            android:text="@string/attendence_report"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="@drawable/buttons"
        android:text="Log Out"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buMyProfileMyProfile"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnHome"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buReminderMyProfile"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/reminder"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>