<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".reminder">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnProfile"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttons"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnHome"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnReminder"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:background="@drawable/buttons"
            android:text="@string/reminder"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#75FFFFFF"
        android:dateTextAppearance="@style/CalenderViewDateCustomText"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>