<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Attendace">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="160dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="125dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/purple_700"
        android:foregroundGravity="center"
        android:text="Submit"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDetail"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="Subject"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/offwhite_project"
        android:textColorHint="@color/offwhite_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDetail"
        android:layout_width="320dp"
        android:layout_height="158dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/offwhite_project"
        android:textColorHint="@color/offwhite_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSubject" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buMyProfileMyProfile"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnHome"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buReminderMyProfile"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons"
            android:text="@string/reminder"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>